--- a/SpringBoot/blog/build.gradle
+++ b/SpringBoot/blog/build.gradle
@@ -24,18 +24,28 @@ configurations {
 //lombok 설정 추가 끝
 
 dependencies {
+	// Thymeleaf 템플릿 엔진을 사용하기 위한 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// Spring Web MVC를 사용
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Spring Data JPA를 사용
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// 롬복 라이브러리를 컴파일 시에만 사용
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	// 테스트용
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	// 롬복 어노테이션 프로세서
 	annotationProcessor 'org.projectlombok:lombok'
+	// 테스트용 롬복 어노테이션 프로세서
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
+	/* PostgreSQL 연동 */
+	// PostgreSQL 데이터베이스 드라이버
 	runtimeOnly 'org.postgresql:postgresql'
+	// Spring Data JPA를 사용
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// PostgreSQL JDBC 드라이버
 	implementation 'org.postgresql:postgresql'
 }
 
