--- a/SpringBoot/blog/src/main/resources/application.properties
+++ b/SpringBoot/blog/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.defer-datasource-initialization=true
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.h2.console.enabled=true
 
-
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog_db
 spring.datasource.username=postgres
 spring.datasource.password=wjddlsdn5
 
