--- a/SpringBoot/hello-spring/build.gradle
+++ b/SpringBoot/hello-spring/build.gradle
@@ -15,7 +15,11 @@ repositories {
 	mavenCentral()
 }
 
+/* 개발자가 컨트롤 하는 부분 */
 dependencies {
+	// 다운받을 라이브러리 목록 작성
+	// 예전에는 라이브러리 뒤쪽에 버전 정보를 명시해줬어야 하는데(버전 충돌 많이 난다) 지금은 생략 가능.
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
