--- a/SpringBoot/hello-spring/build.gradle
+++ b/SpringBoot/hello-spring/build.gradle
@@ -20,9 +20,20 @@ dependencies {
 	// 다운받을 라이브러리 목록 작성
 	// 예전에는 라이브러리 뒤쪽에 버전 정보를 명시해줬어야 하는데(버전 충돌 많이 난다) 지금은 생략 가능.
 
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.3'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//lombok 라이브러리
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
