--- a/SpringBoot/blog/build.gradle
+++ b/SpringBoot/blog/build.gradle
@@ -47,6 +47,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// PostgreSQL JDBC 드라이버
 	implementation 'org.postgresql:postgresql'
+
+	/* 스프링 시큐리티 적용 */
+	// 스프링 시큐리티를 사용하기 위한 스타터
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// 타임리프에서 스프링 시큐리티를 사용하기 위한 의존성
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	// 스프링 시큐리티를 테스트하기 위한 의존성
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
