--- a/JPA/jpa-example/build.gradle
+++ b/JPA/jpa-example/build.gradle
@@ -16,9 +16,25 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-jdbc')
+
+	implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.1'
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.12'
+	implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.1'
+
+
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation platform('org.junit:junit-bom:5.9.1')
+	testImplementation 'org.junit.jupiter:junit-jupiter'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
