--- a/JPA/spring-mybatis2/build.gradle
+++ b/JPA/spring-mybatis2/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
+    id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'idea' //to download sources automatically
     id "org.flywaydb.flyway" version "10.8.1"
@@ -33,10 +33,10 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-jdbc')
     implementation ('org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3')
 
+
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.1'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.12'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.1'
-
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
@@ -53,21 +53,14 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testCompileOnly 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
-//flyway {
-//    url = 'jdbc:mysql://127.0.0.1:11802/test?useSSL=false'
-//    user = 'root'
-//    password = 'root'
-//}
-
+flyway {
+    url = 'jdbc:mysql://127.0.0.1:11802/test?useSSL=false'
+    user = 'root'
+    password = 'root'
+}
 
 test {
-    useJUnitPlatform()
-}
-
-tasks.named('test') {
     useJUnitPlatform()
 }
