--- a/JPA/spring-mybatis/.gitignore
+++ b/JPA/spring-mybatis/.gitignore
@@ -1,42 +1,46 @@
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Compiled class file
+*.class
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# Log file
+*.log
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# BlueJ files
+*.ctxt
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-### VS Code ###
-.vscode/
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-### Mac OS ###
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+.gradle/**
+build/*
+.idea/*
+.gradle/8.5/checksums/checksums.lock
+.gradle/8.5/checksums/sha1-checksums.bin
+.gradle/8.5/executionHistory/executionHistory.bin
+.gradle/8.5/executionHistory/executionHistory.lock
+.gradle/8.5/fileHashes/fileHashes.bin
+.gradle/8.5/fileHashes/fileHashes.lock
+.gradle/8.5/fileHashes/resourceHashesCache.bin
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/outputFiles.bin
+.gradle/file-system.probe
+.idea/misc.xml
+.idea/modules/spring-mybatis.main.iml
+.idea/vcs.xml
+build/resources/main/application.yml
+build/resources/main/mybatis-config.xml
+build/tmp/compileJava/compileTransaction/stash-dir/StudentController.class.uniqueId0
+build/tmp/compileJava/compileTransaction/stash-dir/StudentService.class.uniqueId1
+build/tmp/compileJava/previous-compilation-data.bin
 .DS_Store
